--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Nomoz vaqtlari</title>
+    <title>Namoz vaqtlari</title>
 </head>
 <body>
     <section class="hero">
+        <header class="site-header bg-white">
+            <div class="container px-3 px-md-0">
+                <nav class="p-3 d-flex justify-content-between align-items-center">
+                    <div class="logo">
+                        <a class="text-decoration-none fs-4 fw-bold" href="index.html">Namoz vaqtlari</a>
+                    </div>
+                    <ul class="nav-list list-unstyled mb-0">
+                        <li class="nav-item d-flex align-items-center">
+                            <strong class="header-titile-time">Joriy vaqt</strong>
+                            <h5 class="mb-0 ms-2 fw-bold header-time">12:08</h5>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
         <div class="container px-3 px-md-0">
             <div class="title-wrap my-5">
                 <div class="title-content-wrap rounded p-3">
@@ -78,33 +93,33 @@
             <time class="week-time-text d-block text-center"></time>
         </div>
         <div class="d-flex row">
-            <div class="item-morning col-12 mx-auto mt-3 item d-flex flex-column justify-content-center">
-                <img src="./images/Fajr.png" width="100" height="100" alt="dhuhr">
+            <div class="item-morning item col-12 mx-auto mt-3 d-flex flex-column justify-content-center">
+                <img class="mx-auto" src="./images/Fajr.png" width="100" height="100" alt="dhuhr">
                 <p class="prayer-title fw-semibold fs-5">Bomdod</p>
                 <time class="time-prayer-morning fs-3">04:26</time>
             </div>
-            <div class="item-sunrise col-12 mx-auto mt-3 item d-flex flex-column justify-content-center">
-                <img src="./images/Sunrise.png" width="100" height="100" alt="sunrise">
+            <div class="item-sunrise item col-12 mx-auto mt-3 d-flex flex-column justify-content-center">
+                <img class="mx-auto" src="./images/Sunrise.png" width="100" height="100" alt="sunrise">
                 <p class="prayer-title fw-semibold fs-5">Quyosh</p>
                 <time class="time-prayer-sunrise fs-3">04:26</time>
             </div>
             <div class="item-noon item col-12 mx-auto mt-3 d-flex flex-column justify-content-center">
-                <img src="./images/Dhuhr.png" width="100" height="100" alt="dhuhr">
+                <img class="mx-auto" src="./images/Dhuhr.png" width="100" height="100" alt="dhuhr">
                 <p class="prayer-title fw-semibold fs-5">Peshin</p>
                 <time class="time-prayer-noon fs-3">04:26</time>
             </div>
-            <div class="item-century col-12 mx-auto mt-3 item d-flex flex-column justify-content-center">
-                <img src="./images/asr.png" width="100" height="100" alt="asr">
+            <div class="item-century item col-12 mx-auto mt-3 d-flex flex-column justify-content-center">
+                <img class="mx-auto" src="./images/asr.png" width="100" height="100" alt="asr">
                 <p class="prayer-title fw-semibold fs-5">Asr</p>
                 <time class="time-prayer-century fs-3">04:26</time>
             </div>
-            <div class="item-evening col-12 mx-auto mt-3 item d-flex flex-column justify-content-center">
-                <img src="./images/Maghrib.png" width="100" height="100" alt="maghrib">
+            <div class="item-evening item  col-12 mx-auto mt-3 d-flex flex-column justify-content-center">
+                <img class="mx-auto" src="./images/Maghrib.png" width="100" height="100" alt="maghrib">
                 <p class="prayer-title fw-semibold fs-5">Shom</p>
                 <time class="time-prayer-evening fs-3">04:26</time>
             </div>
             <div class="item-night item col-12 mx-auto mt-3 d-flex flex-column justify-content-center">
-                <img src="./images/Isha.png" width="100" height="100" alt="isha">
+                <img class="mx-auto" src="./images/Isha.png" width="100" height="100" alt="isha">
                 <p class="prayer-title fw-semibold fs-5">Xufton</p>
                 <time class="time-prayer-night fs-3">04:26</time>
             </div>
