--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div class="title-content-wrap rounded p-3">
                     <h3 class="title-region text-center fw-semibold"></h3>
                     <div class="d-flex align-items-center justify-content-center border p-2">
-                        <time class="time-date d-block text-center"></time>
-                        <p class="weekday text-center ms-3 mb-0"></p>
+                        <time class="time-date fw-bold d-block text-center"></time>
+                        <p class="weekday  fw-bold ms-3 mb-0"></p>
                     </div>
                 </div>
                 
