--- a/audio.html
+++ b/audio.html
@@ -20,7 +20,7 @@
                     <ul class="nav-list list-unstyled mb-0">
                         <li class="nav-item d-flex align-items-center">
                             <strong class="header-titile-time">Joriy vaqt</strong>
-                            <h5 class="mb-0 ms-2 mt-1 fw-bold header-time">12:08</h5>
+                            <h5 class="mb-0 ms-2 fw-bold header-time">12:08</h5>
                         </li>
                     </ul>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
                     <div class="hero-iymon-title-wrap">
                         <h2 class="text-center fs-1">Qur'oni Karim</h2>
                     </div>
-                    <ul class="view-audio-list list-unstyled row justify-content-between">
+                    <ul class="view-audio-list list-unstyled row justify-content-between ms-0">
                         
                     </ul>
                 </div>
