--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <ul class="nav-list list-unstyled mb-0">
                             <li class="nav-item d-flex align-items-center">
                                 <strong class="header-titile-time">Joriy vaqt</strong>
-                                <h5 class="mb-0 ms-2 mt-1 fw-bold header-time">12:08</h5>
+                                <h5 class="mb-0 ms-2 fw-bold header-time">12:08</h5>
                             </li>
                         </ul>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
