--- a/index.html
+++ b/index.html
@@ -9,67 +9,53 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Namoz vaqtlari</title>
 </head>
-<body>
-    <section class="hero">
-        <!-- <header class="site-header bg-white">
-            <div class="container px-3 px-md-0">
-                <nav class="p-3 d-flex justify-content-between align-items-center">
-                    <ul class="list-unstyled d-flex mb-0">
-                        <li class="logo">
-                            <a class="text-decoration-none fs-4 fw-bold" href="index.html">Namoz vaqtlari</a>
-                        </li>
-                        <li class="nav-item d-flex align-items-center ms-4">
-                            <a class="text-decoration-none navbar-link" href="./audio.html">Qur'oni karim</a>
-                        </li>
-                        <li class="nav-item d-flex align-items-center ms-4">
-                            <a class="text-decoration-none navbar-link" href="./iymon.html">Iymon</a>
-                        </li>
-                        <li class="nav-item d-flex align-items-center ms-4">
-                            <a class="text-decoration-none navbar-link" href="./index.html">Namoz vaqtlari</a>
-                        </li>
-                    </ul>
-                    <ul class="nav-list list-unstyled mb-0 d-flex">
+<body>  
+    <!-- loder -->
+    <div class="loder">
+        <div class="loderspan">
+            <div class="lodermiddil">
+            </div>
+        </div>
+    </div>
+    <!-- loder end -->
+
+    <header class="site-header bg-white">
+        <div class="container px-3 px-md-0">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <div class="logo">
+                        <a class="text-decoration-none fw-bold" href="index.html">Namoz vaqtlari</a>
+                    </div>
+                    <ul class="nav-list list-unstyled mb-0">
                         <li class="nav-item d-flex align-items-center">
                             <strong class="header-titile-time">Joriy vaqt</strong>
                             <h5 class="mb-0 ms-2 fw-bold header-time">12:08</h5>
                         </li>
                     </ul>
-                </nav>
-            </div>
-        </header> -->
-        <header class="site-header bg-white">
-            <div class="container px-3 px-md-0">
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <div class="logo">
-                            <a class="text-decoration-none fw-bold" href="index.html">Namoz vaqtlari</a>
-                        </div>
-                        <ul class="nav-list list-unstyled mb-0">
-                            <li class="nav-item d-flex align-items-center">
-                                <strong class="header-titile-time">Joriy vaqt</strong>
-                                <h5 class="mb-0 ms-2 fw-bold header-time">12:08</h5>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <ul class="navbar-nav list-unstyled">
+                            <li class="navbar-nav-item">
+                                <a class="text-decoration-none res-navbar-link nav-link" href="./audio.html">Qur'oni karim</a>
+                            </li>
+                            <li class="navbar-nav-item">
+                                <a class="text-decoration-none res-navbar-link nav-link" href="./iymon.html">Iymon</a>
+                            </li>
+                            <li class="navbar-nav-item">
+                                <a class="text-decoration-none res-navbar-link nav-link" href="./index.html">Namoz vaqtlari</a>
                             </li>
                         </ul>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <ul class="navbar-nav list-unstyled">
-                                <li class="navbar-nav-item">
-                                    <a class="text-decoration-none res-navbar-link nav-link" href="./audio.html">Qur'oni karim</a>
-                                </li>
-                                <li class="navbar-nav-item">
-                                    <a class="text-decoration-none res-navbar-link nav-link" href="./iymon.html">Iymon</a>
-                                </li>
-                                <li class="navbar-nav-item">
-                                    <a class="text-decoration-none res-navbar-link nav-link" href="./index.html">Namoz vaqtlari</a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
-                </nav>
-            </div>
-        </header>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <section class="hero" id="top">
+        <a class="btn-top" href="#top"></a>
+
         <div class="container px-3 px-md-0">
             <!-- <div class="d-flex">
                 <div class="">
