Add new element

--- a/audio.html
+++ b/audio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css"> 
     <title>Qur'oni Karim</title>
 </head>
-<body>
+<body  id="top">
     <!-- loder -->
     <div class="loder">
         <div class="loderspan">
@@ -57,7 +57,7 @@
     <!-- SITE MAIN START -->
     <main class="site-main">
         <!-- HERO SECTION START -->
-        <section class="hero" id="top">
+        <section class="hero">
             <a class="btn-top" href="#top"></a>
             <div class="container px-3">
                 <div class="view-audio-wrapper px-3">
@@ -75,11 +75,6 @@
                         <button class="btn btn-audio-close btn-danger">X</button>
                     </div>
                     <ul class="audios-list list-unstyled px-3">
-                        <!-- <li class="audios-item">
-                            <h4 class="audio-title text-white">1</h4>
-                            <p class="audio-text text-white">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ قُلْ أَعُوذُ بِرَبِّ ٱلْفَلَقِ</p>
-                            <audio class="audio-m" controls src=""></audio>
-                        </li> -->
                     </ul>
                     <a class="btn-top" href="#topp"></a>
                 </div>
