--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Namoz vaqtlari</title>
 </head>
-<body>  
+<body id="top">  
     <!-- loder -->
     <div class="loder">
         <div class="loderspan">
@@ -53,18 +53,9 @@
         </div>
     </header>
 
-    <section class="hero" id="top">
+    <section class="hero">
         <a class="btn-top" href="#top"></a>
-
         <div class="container px-3 px-md-0">
-            <!-- <div class="d-flex">
-                <div class="">
-                    <a class="text-decoration-none px-2 audio-link text-black fs-4" href="./audio.html">Qur'oni karim</a>
-                </div>
-                <div class="ms-4">
-                    <a class="text-decoration-none px-2 audio-link text-black fs-4" href="./iymon.html">Iymon</a>
-                </div>
-            </div> -->
             <div class="title-wrap my-5">
                 <div class="title-content-wrap rounded p-3">
                     <h3 class="title-region text-center fw-semibold"></h3>
@@ -124,26 +115,7 @@
                     </tbody>
                 </table>
             </div>
-            <!-- <div class="view-audio-wrapper">
-                <h2 class="text-center">Qur'oni Karim</h2>
-                <ul class="view-audio-list list-unstyled row justify-content-around">
-                    
-                </ul>
-            </div> -->
         </div>
-        <!-- <div class="wrapper-fixsid px-3">
-            <div class="btn-title-wrap mt-5 d-flex justify-content-between align-items-center">
-                <h4 class="text-center fs-2 text-white audio-text-title">Al Fatiha</h4>
-                <button class="btn btn-audio-close btn-danger">X</button>
-            </div>
-            <ul class="audios-list list-unstyled px-3">
-                <li class="audios-item">
-                    <h4 class="audio-title text-white">1</h4>
-                    <p class="audio-text text-white">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ قُلْ أَعُوذُ بِرَبِّ ٱلْفَلَقِ</p>
-                    <audio class="audio-m" controls src=""></audio>
-                </li>
-            </ul>
-        </div> -->
     </section>
     <section class="prayer-text">
         <div class="container px-3 px-md-0">
@@ -248,27 +220,7 @@
             </td>
         </tr>
     </template>
-    <!-- <template class="view-audio-template">
-        <li class="view-audio-item col-5 my-4 bg-info p-2">
-            <div class="d-flex justify-content-between">
-                <h4 class="view-audio-title">Al-Faatiha</h4>
-                <p class="view-audio-name"></p>
-                <p class="view-audio-text">Meccan</p>
-            </div>
-            <div class="d-flex justify-content-between">
-                <span class="view-audio-number">7</span>
-                <button class="btn btn-view-audio btn-warning">O'qish</button>
-            </div>
-        </li>
-    </template>
-    <template class="audio-template">
-        <li class="audios-item">
-            <h4 class="audio-title text-white"></h4>
-            <p class="audio-text text-white"></p>
-            <audio class="audio-m" controls src=""></audio>
-        </li>
-    </template> -->
-    <script src="//code.jivosite.com/widget/9BVrLQXcb6" async></script>
+    <!-- <script src="//code.jivosite.com/widget/9BVrLQXcb6" async></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
