--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                             <li class="navbar-nav-item">
                                 <a class="text-decoration-none res-navbar-link nav-link" href="./index.html">Namoz vaqtlari</a>
                             </li>
+                            <li class="navbar-nav-item">
+                                <a class="text-decoration-none res-navbar-link nav-link" href="./ramadan.html">Ramazon taqvimi</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
